--- a/TodoListApplicationXUnitTests/TodoListApplicationXUnitTests.csproj
+++ b/TodoListApplicationXUnitTests/TodoListApplicationXUnitTests.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.14.0-beta0001" />
+    <PackageReference Include="DocuSign.eSign.dll" Version="5.8.0-rc" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -17,6 +19,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TodoListApplication\TodoListApplication.csproj" />
   </ItemGroup>
 
 </Project>
